--- a/public/css/style.css
+++ b/public/css/style.css
@@ -914,7 +914,7 @@ blockquote .fa {
 	right: 0;
 	top: 0;
 	height: 100%;
-	background: rgba(0,0,0,0.70);
+	/*background: rgba(0,0,0,0.70);*/
 	text-align: center;
 	color: #fff;
 	display: table;
@@ -932,12 +932,15 @@ blockquote .fa {
 .slider-content h2, 
 .slider-content h3 {
 	color: inherit;
-	font-size: 100px;
+	font-size: 40px;
+	text-transform: uppercase;
+	text-shadow:0px 0px 5px rgba(0,0,0,0.4);
+	-webkit-text-shadow:0px 0px 5px rgba(0,0,0,0.4);
 }
 .slider-content h1, 
 .slider-content h2 {
 	line-height: 1.2;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 	-webkit-transform: translateY(40px);
 	transform: translateY(40px);
 	-webkit-transition-delay: 0.7s;
@@ -952,6 +955,8 @@ blockquote .fa {
 	-webkit-transition-delay: 1.1s;
 	transition-delay: 1.1s;
 	opacity: 0;
+	text-shadow:0px 0px 5px rgba(0,0,0,0.4);
+	-webkit-text-shadow:0px 0px 5px rgba(0,0,0,0.4);
 }
 .slider-content .cta-row {
 	-webkit-transform: translateY(40px);
@@ -1008,9 +1013,9 @@ blockquote .fa {
 	right: 25px;
 }
 .main-slider .owl-nav > div {
-	color: #fff;
-	border-color: #fff;
-	color: #fff;
+	color: #000;
+	border-color: #000;
+	color: #000;
 }
 .owl-nav > div:hover {
 	opacity: 1;
@@ -1047,7 +1052,7 @@ blockquote .fa {
 	width: 22px;
 	height: 22px;
 	border-style: solid;
-	border-color: #fff;
+	border-color: #000;
 	border-width: 0 3px 3px 0;
 	-webkit-transform: rotate(45deg);
 	transform: rotate(45deg);
@@ -1485,7 +1490,7 @@ img.mfp-img, .mfp-img-mobile img.mfp-img {
 	transform: translateY(60px);
 	color: #bbb;
 }
-.team-box:hover .team-overlay {
+/*.team-box:hover .team-overlay {
 	top: 0;
 	height: 100%;
 }
@@ -1494,8 +1499,8 @@ img.mfp-img, .mfp-img-mobile img.mfp-img {
 	transform: translateY(0);
 	background: none;
 	padding: 0;
-}
-.team-box:hover .team-overlay p {
+}*/
+/*.team-box:hover .team-overlay p {
 	opacity: 1;
 	-webkit-transform: translateY(0);
 	transform: translateY(0);
@@ -1520,7 +1525,7 @@ img.mfp-img, .mfp-img-mobile img.mfp-img {
 	left: 30px;
 	right: 30px;
 	margin: 0 auto;
-}
+}*/
 .team-header h4 {
 	font-size: 20px;
 	margin: 0;
@@ -3413,7 +3418,7 @@ button:hover {
 }
 .btn.btn-white {
 	background-color: #fff;
-	color: #242424;
+	color: #8c2cf2;
 }
 .btn.btn-white:hover, 
 .btn.btn-white:focus {
@@ -3560,3 +3565,105 @@ input[type="button"].btn-xs.btn-outline {
 	font-size: 16px;
 	margin-bottom: 50px;
 }
+
+/*Modifiers*/
+.about-section p{
+	margin:0 auto;
+	line-height: 1;
+}
+
+.about-section .icon{
+	background-position: center top;
+	background-repeat: no-repeat;
+	height: 4.4rem;
+	display: block;
+	margin:1rem auto;
+	width: 4.4rem;
+}
+
+.about-section .feature-col:hover .icon{
+	background-position: center bottom;
+}
+
+
+.about-section .icon-rs{
+	background-image: url('../images/layout/icon-rs.png');
+}
+
+.about-section .icon-adapt{
+	background-image: url('../images/layout/icon-adapt.png');
+	
+}
+
+.about-section .icon-formas{
+	background-image: url('../images/layout/icon-formas.png');
+
+}
+.about-section .icon-exp{
+	background-image: url('../images/layout/icon-exp.png');
+}
+
+#services-header .section-title{
+	color:white;
+	margin:2rem auto;
+}
+
+#services-header .section-title::after,
+#services-header .section-title::before{
+	background-color: #fff;
+}
+
+#services-header .section-title span::after,
+#services-header .section-title span::before{
+	background-color: #fff;
+}
+
+#services-header p{
+	line-height: 1;
+	margin:0.5rem auto;
+}
+
+.service-col:hover .icon-mg{
+	background-position: center bottom;
+}
+
+.icon-mg{
+	background-position: center top;
+	background-repeat: no-repeat;
+	height: 5rem;
+	display: block;
+	margin:1rem auto;
+	width: 5rem;
+}
+
+.icon-mg-1{
+	background-image: url('../images/layout/icon-mg-1.png');	
+
+}
+
+.icon-mg-2{
+	background-image: url('../images/layout/icon-mg-2.png');	
+
+}
+
+.icon-mg-3{
+	background-image: url('../images/layout/icon-mg-3.png');	
+
+}
+
+.icon-mg-4{
+	background-image: url('../images/layout/icon-mg-4.png');	
+
+}
+
+.icon-mg-5{
+	background-image: url('../images/layout/icon-mg-5.png');	
+
+}
+
+.icon-mg-6{
+	background-image: url('../images/layout/icon-mg-6.png');	
+
+}
+
+
