--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1597,6 +1597,7 @@ img.mfp-img, .mfp-img-mobile img.mfp-img {
 	width: 100%;
 }
 .quote-icon {
+	color:white;
 	font-size: 40px;
 	display: block;
 	opacity: 0.22;
