--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3667,4 +3667,20 @@ input[type="button"].btn-xs.btn-outline {
 
 }
 
+#instafeed{
+	margin:1rem auto;
+	max-width: 600px;
+}
 
+#instafeed .item-feed {
+	margin-bottom: 1rem;
+}
+#instafeed .item-feed img{
+	-moz-object-fit:cover;
+	-ms-object-fit:cover;
+	-o-object-fit:cover;
+	-webkit-object-fit:cover;
+	height: 17rem;
+	object-fit:cover;
+	width: 100%;
+}
